Hide ORV feature for next release

--- a/cllc-public-app/ClientApp/src/app/components/account-profile/account-profile.component.html
+++ b/cllc-public-app/ClientApp/src/app/components/account-profile/account-profile.component.html
@@ -363,7 +363,7 @@
 
     </div>
   </section>
-  <section class="submit-container" style="background-color: #F2F2F2; border: none; color: #000;">
+  <!-- <section class="submit-container" style="background-color: #F2F2F2; border: none; color: #000;">
     <h2 style="color: #000">Online Retailer Verification:</h2>
     <div class="submit-content">
       <p>To obtain the Online Retailer Verification button to place on your Website(s), 
@@ -377,7 +377,7 @@
           <span class="compact-button">Generate ORV Code</span>
       </button>
     </div>
-  </section>
+  </section> -->
   <section class="submit-container" style="background-color: #F2F2F2; border: none; color: #000;">
     <h2 style="color: #000">Collection Notice:</h2>
     <div class="submit-content">
@@ -396,11 +396,11 @@
 </div>
 
 <!-- Modal HTML -->
-<ng-template #badgeTemplateDialog>
+<!-- <ng-template #badgeTemplateDialog>
   <h2 mat-dialog-title class="centered-title">Generate ORV Code</h2>
   <p>Paste this code into your website to create your Online Retailer Verification button:</p>
   <pre><code>{{generatedOrvCode}}</code></pre>
   <div mat-dialog-actions class="center-actions">
     <button mat-raised-button color="primary" (click)="onCopy()">Copy</button>
   </div>
-</ng-template>
+</ng-template> -->
